# knowledge-base-chat-bot

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  ENV_SETUP.md  MEMORY_SYSTEM.md  README.md  activate_venv.sh  main.py  pyproject.toml  requirements.txt  setup.py  start_app.py
config/: settings.py  user_settings.json
data/notebooks/: notebooks.json
docs/: SETTINGS_GUIDE.md
src/: __init__.py
src/ai/: __init__.py  function_calling.py  llm_client.py  multimodal.py  prompt_engineer.py  summarizer.py
src/ai/langchain/: __init__.py  llm_client.py  memory_manager.py  output_parsers.py  prompt_manager.py
src/ai/langgraph/: __init__.py
src/ai/langgraph/workflows/: qa_workflow.py  summarization_workflow.py
src/analysis/: __init__.py  text_analyzer.py  text_chunker.py  text_cleaner.py
src/core/: __init__.py  audio_processor.py  base_processor.py  document_processor.py  speech_to_text.py  video_processor.py  youtube_processor.py
src/database/: __init__.py  embedding_generator.py  metadata_manager.py  vector_database.py
src/interface/: __init__.py  app.py  app_context.py  components.py
src/interface/notebooks/: ingest.py  store.py  youtube_simple.py
src/interface/pages/: 01_Notebooks.py  04_Settings.py
src/interface/utils/: notebook_helper.py  notebook_ui.py  performance_monitor.py  prompt_text.py
src/search/: __init__.py  reranker.py  retrieval_engine.py  semantic_search.py  web_search.py
src/utils/: __init__.py  cache.py  exceptions.py  feature_flags.py  logger.py  memory.py  performance.py  settings_manager.py
